--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,12 +31,21 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const inventorsBornIn1500s = inventors.filter(inventors => inventors.year > 1499 && inventors.year < 1600);
+
+    console.table(inventorsBornIn1500s);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
 
+    const names = inventors.map(inventors => `${inventors.first} ${inventors.last}`);
+    console.table(names); 
+
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+
+    const sortedList = inventors.sort();
+    console.table(sortedList);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
