--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -9,9 +9,9 @@
 
     <div class="clock">
       <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
+        <div class="hand hourHandColor hour-hand"></div>
+        <div class="hand minuteHandColor min-hand"></div>
+        <div class="hand secondHandColor second-hand"></div>
       </div>
     </div>
 
@@ -61,14 +61,53 @@
       height: 6px;
       background: black;
       position: absolute;
-      top: 50%;
+	  top: 50%;
+	  transform: rotate(90deg);
+	  transform-origin: 100%;
+	  transition: all 0.05s;
+	  transition-timing-function: cubic-bezier(0.94, 0.11, 0.38, 1.63);
     }
+	.hourHandColor {
+		background-color: black;
+	}
+	.minuteHandColor {
+		background-color: black;
+		height: 3px;
+	}
+	.secondHandColor {
+		background-color: gray;
+		height: 1px;
+		;
+	}
 
   </style>
 
+
   <script>
+const secondHand = document.querySelector('.second-hand');
+const minuteHand = document.querySelector('.min-hand');
+const hourHand = document.querySelector('.hour-hand');
+function setDate() {
+		// console.log('Howdy!');
+		const now = new Date();
 
+		const seconds = now.getSeconds();
+		const secondsDegrees = ((seconds / 60) * 360) + 90;
+		secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
+		const min = now.getMinutes();
+		const minutesDegrees = ((min / 60) * 360) + 90;
+		minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+
+		const hours = now.getHours();
+		const hourDegrees = ((hours / 12) * 360) + 90;
+		hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+
+	console.log(hours + ":" + min + ":" + seconds);
+
+	}
+
+	  setInterval(setDate, 1000);
   </script>
 </body>
 </html>
