--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -18,9 +18,23 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="C:\Users\swalker1\Dropbox (Under Armour)\My Pictures\Wallpaper\tiger-cubs-india_89337_990x742.jpg">
 
   <style>
+	:root {
+		--base: #ffc600;
+		--spacing: 10px;
+		--blur: 10px;
+	}
+
+	  img {
+		padding: var(--spacing);
+		background: var(--base);
+		filter: blur(var(--blur));
+	  }
+	  .hl {
+		  color: var(--base);
+	  }
 
     /*
       misc styles, nothing to do with CSS variables
@@ -45,6 +59,16 @@
   </style>
 
   <script>
+	  const inputs = document.querySelectorAll('.controls input');
+
+	  function handleUpdate() {
+		  const suffix = this.dataset.sizing || '';
+		  document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+	  }
+
+	  inputs.forEach(input => input.addEventListener('change', handleUpdate));
+	  inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+
   </script>
 
 </body>
